--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </ul>
 <h5><i class="fa fa-list-alt"></i> Tema 1 <i class="fa fa-chevron-down"></i></h5>
 <ul>
-<li id="itemTema1"><i></i> Tema 1</li>
+<li id="itemTema1"><i></i> Tema 2</li>
 </ul>
 <h5><i class="fa fa-edit"></i> Actividad <i class="fa fa-chevron-down"></i></h5>
 <ul>
@@ -75,7 +75,7 @@
 </div>
 <div id="content" class="intro">
 <div id="cabecera">
-	<img src="iconoPrin.png"/>
+	<img src="iconoPrin2.png"/>
 	<pre><h2>              PROCESAMIENTO DE DATOS ARBITRARIAMENTE GRANDES</h2></pre>
 </div>
 <div id="escenario">
