--- a/objetivos.html
+++ b/objetivos.html
@@ -15,7 +15,7 @@
     <body>
         <div id="content">
             <div id ="cabecera">
-              <img src="iconoPrin.png"/>
+              <img src="iconoPrin2.png"/>
               <pre><h2>              PROCESAMIENTO DE DATOS ARBITRARIAMENTE GRANDES</h2></pre>
             </div>
   
