--- a/tema2.html
+++ b/tema2.html
@@ -21,15 +21,77 @@ and open the template in the editor.
   
         <div id="escenario">
                  <pre><h3 id="pointer">       <i class="fa fa-list"></i> TEMA 2</h3> </pre>
-                  <p>Hacer clic en las pestañas para continuar </p><img src="indicacion1.png"/>
+                  <p>Hacer clic en las pestañas para continuar </p><img id="iPestaña" src="pestañas.png"/>
 
         <!--  <div id="contenidoGeneral">-->
+ <!--         
+          <div class="tab-body-container ">
+  <ul class="tab-group">
+    <li id='tab-1' >3</li>
+    <li id='tab-2'>2</li>
+    <li id='tab-3'class='tab-current'>1</li>
+  </ul>
+
+  <ul class="body-group">
+    <li id='body-1'>
+      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren</p>
+
+
+      <p>No sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
+        dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed
+        diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+    </li>
+    <li id='body-2'>
+      <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te
+        feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+    </li>
+    <li id='body-3'>
+      <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat
+        nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+    </li>
+  </ul>
+</div>-->
+              <!-- Contenedor principal -->
+  <div class="menu">
+    
+
+    <ul class="menu__tabs">
+      <li><a href="#item-4">4</a></li>
+      <li><a href="#item-3">3</a></li>
+      <li><a href="#item-2">2</a></li>
+      <li><a class="active" href="#item-1">1</a></li>
+    </ul>
+    <section class="menu__wrapper">
+      <article id="item-1" class="menu__item item-active">
+        <h3>Contenido Uno</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis facere dolore, repellat ratione. Deserunt adipisci quisquam ipsam ut neque, ex non tempore saepe odit consequuntur iusto magni quas expedita perferendis consectetur eius nobis quae, commodi exercitationem dolorum fugit nihil quidem mollitia! Sint totam, unde, ullam <a href="">exercitationem</a> pariatur doloremque tenetur est. Eligendi rerum officia, doloremque amet iusto delectus quo consequuntur, nostrum dolor ullam quod fugiat, eveniet perferendis natus. Illum eum, quas delectus ducimus dicta! Rem, mollitia sequi repellat corporis, numquam eligendi.</p>
+      </article>
+      
+      <article id="item-2" class="menu__item">
+        <h3>Contenido Dos</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, dignissimos nam dolor est. Ad vel eum voluptates rerum. Harum quia dolore architecto ducimus, rem porro minus perferendis ab eveniet aliquid!</p>
+      </article>
+
+      <article id="item-3" class="menu__item">
+        <h3>Contenido Tres</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, dignissimos nam dolor est. Ad vel eum voluptates rerum. Harum quia dolore architecto ducimus, rem porro minus perferendis ab eveniet aliquid!</p>
+      </article>
+  
+      <article id="item-4" class="menu__item">
+        <h3>Contenido Cuatro</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, dignissimos nam dolor est. Ad vel eum voluptates rerum. Harum quia dolore architecto ducimus, rem porro minus perferendis ab eveniet aliquid!</p>
+      </article>
+
+    </section>
+    <div class="menu--shadow"></div>
+  </div>
+
 
 
 
   
 
-               <script  src="tema2.js"></script>
+               <script  src="tabs.js"></script>
 
 
 
