--- a/tema2.html
+++ b/tema2.html
@@ -106,11 +106,24 @@
                           <p id="subtitulo3"><span>ÁRBOL BINARIO</span></p>
                           <img id="arbolB" src="arbolB.gif">
                         </li>
-                        <li class="slider-item">helloooo
-                          <div><img id="subRecorridos" src="recorridos.png"></div>
-                          
+                        <li class="slider-item">
+                          <img id="subRecorridos" src="recorridos.png">
+                          <p id="salmon"><span>1</span>
+                          <p id="subtitulo4"><span>INORDEN</span></p>
+                          <p id="verde"><span>2</span>
+                          <p id="subtitulo5"><span>PREORDEN</span></p>
+                          <p id="azul"><span>3</span>
+                          <p id="subtitulo6"><span>POSTORDEN</span></p>
+                          <div class="loading"> 
+                            <h2 class="freelancer" style="">Recorrer en <b>inorden</b> el subárbol izquierdo, visitar el elemento de la raíz y luego recorrer en inorden el subárbol derecho.</h2>
+                          </div>
+                          <div class="loading1"> 
+                            <h2 class="freelancer1" style="">Visitar el elemento de la raíz, recorrer en <b>preorden</b> el subárbol izquierdo y luego recorrer en preorden el subárbol derecho.</h2>
+                          </div>
+                          <div class="loading2"> 
+                            <h2 class="freelancer2" style="">Recorrer en <b>postorden</b> el subárbol izquierdo, luego recorrer en postorden el subárbol derecho y finalmente visitar el elemento de la raíz.</h2>
+                          </div>
                         </li>
-
                         <li class="slider-item">Item 3</li>
                         <li class="slider-item">Item 4</li>
                         <li class="slider-item">Item 5</li>
@@ -199,6 +212,7 @@
              </div>
 
            </div>
+</div>
 
          </div>
        </div>
