--- a/tema2.html
+++ b/tema2.html
@@ -92,6 +92,7 @@
               <div class="slider">
                 <div class="slider-inner">
                     <ul class="slider-container">
+                      <!-- ITEM 1 --> 
                         <li class="slider-item">
                           <img id="defArboles" src="defArboles.png">
                           <p id="subtitulo1"><span>NODO</span></p>
@@ -107,6 +108,7 @@
                           <p id="subtitulo3"><span>ÁRBOL BINARIO</span></p>
                           <img id="arbolB" src="arbolB.gif">
                         </li>
+                        <!-- ITEM 2 --> 
                         <li class="slider-item">
                           <img id="subRecorridos" src="recorridos.png">
                           <p id="salmon"><span>1</span>
@@ -125,14 +127,41 @@
                             <h2 class="freelancer2" style="">Recorrer en <b>postorden</b> el subárbol izquierdo, luego recorrer en postorden el subárbol derecho y finalmente visitar el elemento de la raíz.</h2>
                           </div>
                         </li>
-                        <li class="slider-item">Item 3</li>
-                        <li class="slider-item">Item 4</li>
-                        <li class="slider-item">Item 5</li>
+                        <!-- ITEM 3 --> 
+                        <li class="slider-item">
+                          <div id="subEjRecorridos"><img src="subEjRecorridos.png"></div>    
+                          <p id="enunciadoEj"><span>Realice los recorridos anteriormente vistos para el siguiente árbol. </span></p>
+                          <div id="arbolEj"><img  src="arbolEj.png"></div>
+                         <!--
+                          <div id="arrowAnim">
+  <div class="arrowSlidingR">
+    <div class="arrow right"></div>
+  </div>
+  <div class="arrowSlidingR delay1">
+    <div class="arrow right"></div>
+  </div>
+</div> -->
+                           <p id="subInorden"><span>RECORRIDO INORDEN</span></p>
+                           <div id="mEjemplo"><img src="mEjemplo.png"></div>  
+                           <div id="ejInorden"><img src="ejInorden.gif"></div>
+                        </li>
+                        <!-- ITEM 4 --> 
+                        <li class="slider-item">
+                          <p id="subPreorden"><span>RECORRIDO PREORDEN</span></p>  
+                           <div id="ejPreorden"><img src="ejPreorden.gif"></div>
+                          <div><img id="muñecoFin" src="finalizado.png" /></div>
+                         <p id="subPostorden"><span>RECORRIDO POSTORDEN</span></p>  
+                           <div id="ejPostorden"><img src="ejPostorden.gif"></div>
+                        </li>
+                        <!-- ITEM 5 --> 
+                        <li class="slider-item">
+                          Item 5
+                        </li>
                     </ul>
                 </div>
                 <nav class="slider-nav">
-                    <a class="slider-nav-link prev" href="#prev">Précédent</a>
-                    <a class="slider-nav-link next" href="#next">Suivant</a>
+                    <a class="slider-nav-link prev" href="#prev">Atrás</a>
+                    <a class="slider-nav-link next" href="#next">Siguiente</a>
               </div>
             </article>
           <!-- PESTAÑA 3 --> 
