--- a/tema2.html
+++ b/tema2.html
@@ -132,15 +132,6 @@
                           <div id="subEjRecorridos"><img src="subEjRecorridos.png"></div>    
                           <p id="enunciadoEj"><span>Realice los recorridos anteriormente vistos para el siguiente árbol. </span></p>
                           <div id="arbolEj"><img  src="arbolEj.png"></div>
-                         <!--
-                          <div id="arrowAnim">
-  <div class="arrowSlidingR">
-    <div class="arrow right"></div>
-  </div>
-  <div class="arrowSlidingR delay1">
-    <div class="arrow right"></div>
-  </div>
-</div> -->
                            <p id="subInorden"><span>RECORRIDO INORDEN</span></p>
                            <div id="mEjemplo"><img src="mEjemplo.png"></div>  
                            <div id="ejInorden"><img src="ejInorden.gif"></div>
@@ -155,7 +146,20 @@
                         </li>
                         <!-- ITEM 5 --> 
                         <li class="slider-item">
-                          Item 5
+                          <div>
+                            <img id="subRepresentacion" src="subRepresentacion.png" />
+                            <img id="subTipos" src="subTipos.png" />
+                            <img id="logoR" src="drRacket.png" />
+                            <img id="genBin" src="genBin.gif" />
+                            <img id="informatico" src="informatico.png" />
+                          </div>
+                          <p id="texRepresentacion"><span>En DrRacket podemos representar árboles usando estructuras ó usando listas.</span></p>
+                          <div class="animated-box in">
+                            <h1>• Cuando los nodos tienen una cantidad restringida de hijos (no más de 2, 3, etc) se pueden usar <b>estructuras</b>.</h1>
+                          </div>   
+                          <div class="animated-box2 in">
+                            <h1>• Cuando la cantidad de hijos de un nodo no es restringida, es más apropiado usar <b>listas</b>.</h1>
+                          </div>   
                         </li>
                     </ul>
                 </div>
