--- a/objetivos.html
+++ b/objetivos.html
@@ -41,7 +41,7 @@
               </div>
               <div class="back">
                 <h3 class="synopsis">OBJETIVO 1</h3>
-                <p id="objetivo"><span> The series follows the misadventures of alcoholic scientist Rick and his easily influenced grandson Morty, who split their time between domestic family life and interdimensional travel.</span></p>
+                <p id="objetivo"><span> Afianzar conocimientos de la implementación y utilización de árboles.</span></p>
               </div>
             </div>
             </div>
