--- a/tema2.html
+++ b/tema2.html
@@ -239,9 +239,21 @@
         
         </div>
 
+          <div class="botonPestaña4">
+                      <p class="pop-up-button yellow">Ver</p>
+                      <div class="pop-up">
+                        <div class="closeP4">
+                          <span>x</span>
+                        </div>
+
+                        <div class="pop-up-text">
+                          <img id="arbolListas" src="arbolListas.png"/>
+                        </div>
+                      </div>
+                    </div>
+
         <img id="ejemplo" src="ejemplo.png"/>
         <img id="arbolG" src="arbolG.png"/>
-        <img id="arbolLista" src="arbolListas.png"/>
         <img id="implementacion" src="implementacion.png"/>
 
     </div>
@@ -301,7 +313,7 @@
     </div>
 
     <div class="tabP4" tab-id="5">
-     <p>l</p>
+                      
    </div>
 
    <div class="tabP4" tab-id="6">
@@ -430,6 +442,7 @@
 <div class="menu--shadow"></div>
 </div>
 <script src="tema2.js"></script>
+<script src="boton.js"></script>
 <script src="indexPestaña4.js"></script>
 <script src="lightbox.js"></script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
