lightbox y boton step 3

--- a/tema2.html
+++ b/tema2.html
@@ -240,7 +240,7 @@
         </div>
 
           <div class="botonPestaña4">
-                      <p class="pop-up-button yellow">Ver</p>
+                      <p class="pop-up-button verde">Ver</p>
                       <div class="pop-up">
                         <div class="closeP4">
                           <span>x</span>
@@ -264,7 +264,7 @@
  
     <div class="tabP4" tab-id="4">
 	 
-    <div class="recuadro5">FUNCIONES PARA MANEJO DE ARBOLES GENÉRICOS</div>
+    <div class="recuadro5">FUNCIONES CON ESTRUCTURAS PARA MANEJO DE ARBOLES GENÉRICOS</div>
       <div class='caja1'>
         <span>
           <b>• (make-tree dato lista-hijos):</b> Construye un árbol a partir de un dato y una lista de hijos formada por árboles. La lista puede ser vacía. <br><br>
@@ -280,10 +280,22 @@
         </span>
       </div>
 
-      <img id="nota" class="lightbox" src="nota.png"/>
-      <img id="notaa" src="notaa.png"/>
+      <div class='caja3'>
+        <span>
+          <b>NOTA:</b> Un bosque es una lista de árboles (Devueltos por la función hijos-tree)<br><br>
+        </span>
+      </div>
 
+      <div class="containerMass5">
+        <input type="checkbox" id="toggles5" />
+        <label class="buttonMass5" for="toggles5"></label>
+        <nav class="nav5">
+          <img id="arbolListas" src="arbolListas.png"/>
+          
+        </nav>
+      </div>
 
+      
       <div class="ContenText">
         <h1>Constructores</h1>
       </div>
