--- a/tema2.html
+++ b/tema2.html
@@ -391,8 +391,8 @@
         <li rel="tab2">MANEJO</li>
         <li rel="tab3">IMPLEMENTACIÓN</li>
         <li rel="tab4">IMPLEMENTACIÓN</li>
-        <li rel="tab5">IMPLEMENTACIÓN</li>
-        <li rel="tab6">OPERACIÓN 3</li>
+        <li rel="tab5">F. RECURSIVAS</li>
+        <li rel="tab6">F. RECURSIVAS</li>
         <li rel="tab7">OPERACIÓN 4</li>
       </ul>
 
@@ -442,23 +442,11 @@
       <!-- ITEM 2 -->
       <div id="tab2" class="tab__content">
         <div class="manejo">
-          <h1>FUNCIONES CON ESTRUCTURAS</h1>
+          <h1>FUNCIONES QUE USAN LOS ARBOLES BINARIOS</h1>
         </div>
-        <p id="subConstructor"><span>Constructores</span></p>   
-        <p id="subSelector"><span>Selectores</span></p>  
+        <p id="subConstructores"><span>Constructores</span></p>   
+        <p id="subSelectores"><span>Selectores</span></p>  
         <div class="accordion accordion-01">
-          <div class="set">
-            <a>(make-bt &nbsp; dato &nbsp; izq-bt &nbsp; der-bt)<i class="fa fa-plus"></i></a>
-            <div class="content1">
-              <p id="selector1"><span>Crea un árbol binario con un dato, un árbol binario izquierdo y un árbol binario derecho.</span></p>
-            </div>
-          </div>
-          <div class="set">
-            <a>(make-hoja-bt &nbsp; dato)<i class="fa fa-plus"></i></a>
-            <div class="content1">
-              <p id="selector1"><span>Crea una hoja, con su hijo izquierdo e hijo derecho vacíos.</span></p>
-            </div>
-          </div>
           <div class="set">
             <a>'vacio-bt<i class="fa fa-plus"></i></a>
             <div class="content1">
@@ -499,19 +487,23 @@
         <!--<img id="nota" class="lightbox" src="arBinario.png" />-->
         <div class="stickyNote">
           <div class="stickyTitle">
-            (make-btree &nbsp; dato &nbsp; izq &nbsp; der)
+            (make-bt &nbsp; dato &nbsp; izq-bt &nbsp; der-bt)
           </div>
           <div class="stickyContent">
-            Construye un árbol binario a partir de un dato y otros dos árboles binarios.
+            Crea un árbol binario con un dato, un árbol binario izquierdo y un árbol binario derecho.
           </div>
         </div>
         <div class="stickyNote1">
           <div class="stickyTitle1">
-            empty-btree
+           (make-hoja-bt &nbsp; dato)
           </div>
           <div class="stickyContent1">
-            Define el árbol binario vacío.
+            Crea una hoja, con su hijo izquierdo e hijo derecho vacíos.
           </div>
+
+
+
+
         </div>
       </div>
       <!-- #tab2 -->
@@ -530,9 +522,31 @@
       <!-- #tab3 -->
       <!-- #TAB4 -->
       <div id="tab4" class="tab__content">
+        <div class="impConSel">
+            <h1>IMPLEMENTACIÓN DE FUNCIONES</h1>
+        </div>
+         <p id="subConstructor"><span>Constructores</span></p>   
+        <p id="subSelector"><span>Selectores</span></p>  
+        <p id="subMake-bt"><span>make-bt</span></p> 
+         <img id="impMake-bt" class="lightbox" src="make-bt.png" />
+         <p id="subMake-hoja"><span>make-hoja-bt</span></p> 
+         <img id="impMake-hoja" class="lightbox" src="make-hoja.png" />
+         <p id="subVacio-btt"><span>vacio-bt?</span></p> 
+         <img id="impVacio-btt" class="lightbox" src="vacio-btp.png" />
+         <p id="subDato"><span>dato-bt</span></p> 
+         <img id="impDato-bt" class="lightbox" src="dato-bt.png" />
+         <p id="subIzq"><span>izq-bt</span></p> 
+         <img id="impIzq-bt" class="lightbox" src="izq-bt.png" />
+         <p id="subDer"><span>der-bt</span></p>
+         <img id="impDer-bt" class="lightbox" src="der-bt.png" />
+          <p id="subHoja"><span>hoja-bt</span></p>
+         <img id="impHoja-bt" class="lightbox" src="hoja-btp.png" />
+      </div>
+      <!-- #tab4 --> 
+      <div id="tab5" class="tab__content">
         <div class="manejo1">
-            <h1>FUNCIONES CON LISTAS</h1>
-          </div>
+            <h1>FUNCIONES RECURSIVAS</h1>
+        </div>
           <main>
             <section>
               <!-- CAJA 1 -->
@@ -543,7 +557,7 @@
                 </div>
               </div>
               <p id="subImp"><span>Implementación</span></p>
-              <img id="impF1" class="lightbox" src="factorial.png" />
+              <img id="impF1" class="lightbox" src="to-list.png" />
               <!-- CAJA 2 -->
               <div class="cuadroT2">
                 <div class="contents2">
@@ -554,13 +568,12 @@
             </section>
           </main>
           <p id="subImp2"><span>Implementación</span></p>
-          <img id="impF2" class="lightbox" src="factorial.png" />
+          <img id="impF2" class="lightbox" src="member-bt.png" />
       </div>
-      <!-- #tab4 --> 
-      <!-- #TAB5 -->
-      <div id="tab5" class="tab__content">
+      <!-- #tab5 -->
+      <div id="tab6" class="tab__content">
         <div class="manejo1">
-            <h1>FUNCIONES CON LISTAS</h1>
+            <h1>FUNCIONES CON RECURSIVAS</h1>
         </div>
         <main>
           <section>
@@ -572,7 +585,7 @@
               </div>
             </div>
             <p id="subImp3"><span>Implementación</span></p>
-            <img id="impF1-4" class="lightbox" src="factorial.png" />
+            <img id="impF1-4" class="lightbox" src="to-list.png" />
             <!-- CAJA 2 -->
             <div class="cuadroT4">
               <div class="contents4">
@@ -583,13 +596,7 @@
           </section>
         </main>
         <p id="subImp4"><span>Implementación</span></p>
-        <img id="impF2-4" class="lightbox" src="factorial.png" />
-      </div>
-      <!-- #tab5 -->
-      <div id="tab6" class="tab__content">
-
-        <h3>Otra Cosa</h3>
-        <p>Lorem ipsum non pellentesque lacinia ullamcorper faucibus eu quisque, ut odio nisi aptent proin dictumst lorem tincidunt, accumsan nec habitasse arcu nisl lacus gravida odio elementum quis consectetur vehicula egestas.</p>
+        <img id="impF2-4" class="lightbox" src="member-bt.png" />
       </div>
       <!-- #tab6 -->
       <div id="tab7" class="tab__content">
