--- a/tema2.html
+++ b/tema2.html
@@ -442,7 +442,7 @@
       <!-- ITEM 2 -->
       <div id="tab2" class="tab__content">
         <div class="manejo">
-          <h1>FUNCIONES QUE USAN LOS ARBOLES BINARIOS</h1>
+          <h1>FUNCIONES QUE USAN LOS ÁRBOLES BINARIOS</h1>
         </div>
         <p id="subConstructores"><span>Constructores</span></p>   
         <p id="subSelectores"><span>Selectores</span></p>  
@@ -500,10 +500,6 @@
           <div class="stickyContent1">
             Crea una hoja, con su hijo izquierdo e hijo derecho vacíos.
           </div>
-
-
-
-
         </div>
       </div>
       <!-- #tab2 -->
@@ -541,8 +537,9 @@
          <img id="impDer-bt" class="lightbox" src="der-bt.png" />
           <p id="subHoja"><span>hoja-bt</span></p>
          <img id="impHoja-bt" class="lightbox" src="hoja-btp.png" />
-      </div>
+        </div>
       <!-- #tab4 --> 
+      <!-- #TAB5--> 
       <div id="tab5" class="tab__content">
         <div class="manejo1">
             <h1>FUNCIONES RECURSIVAS</h1>
@@ -571,6 +568,7 @@
           <img id="impF2" class="lightbox" src="member-bt.png" />
       </div>
       <!-- #tab5 -->
+      <!-- #TAB6 --> 
       <div id="tab6" class="tab__content">
         <div class="manejo1">
             <h1>FUNCIONES CON RECURSIVAS</h1>
@@ -599,6 +597,7 @@
         <img id="impF2-4" class="lightbox" src="member-bt.png" />
       </div>
       <!-- #tab6 -->
+      <!-- #TAB7 --> 
       <div id="tab7" class="tab__content">
 
         <h3>Otra Cosa</h3>
