PESTAÑA 4 -FUNCIONES RECURSIVAS 2

--- a/tema2.html
+++ b/tema2.html
@@ -571,7 +571,7 @@
       <!-- #TAB6 --> 
       <div id="tab6" class="tab__content">
         <div class="manejo1">
-            <h1>FUNCIONES CON RECURSIVAS</h1>
+            <h1>FUNCIONES RECURSIVAS</h1>
         </div>
         <main>
           <section>
@@ -583,7 +583,7 @@
               </div>
             </div>
             <p id="subImp3"><span>Implementación</span></p>
-            <img id="impF1-4" class="lightbox" src="to-list.png" />
+            <img id="impF1-4" class="lightbox" src="insert-bt.png" />
             <!-- CAJA 2 -->
             <div class="cuadroT4">
               <div class="contents4">
@@ -594,7 +594,7 @@
           </section>
         </main>
         <p id="subImp4"><span>Implementación</span></p>
-        <img id="impF2-4" class="lightbox" src="member-bt.png" />
+        <img id="impF2-4" class="lightbox" src="list-to-bt.png" />
       </div>
       <!-- #tab6 -->
       <!-- #TAB7 --> 
