--- a/tema2.html
+++ b/tema2.html
@@ -393,7 +393,7 @@
         <li rel="tab4">IMPLEMENTACIÓN</li>
         <li rel="tab5">F. RECURSIVAS</li>
         <li rel="tab6">F. RECURSIVAS</li>
-        <li rel="tab7">OPERACIÓN 4</li>
+        <li rel="tab7">EJEMPLO</li>
       </ul>
 
       <div class="tab__container">
@@ -599,12 +599,17 @@
       <!-- #tab6 -->
       <!-- #TAB7 --> 
       <div id="tab7" class="tab__content">
-
-        <h3>Otra Cosa</h3>
-        <p>Lorem ipsum non pellentesque lacinia ullamcorper faucibus eu quisque, ut odio nisi aptent proin dictumst lorem tincidunt, accumsan nec habitasse arcu nisl lacus gravida odio elementum quis consectetur vehicula egestas.</p>
-      </div>
+        <div class="subEjemploF">
+            <h1>EJEMPLO DE ÁRBOL BINARIO</h1>
+        </div>
+        <img id="ejArbolB" src="ejArbolB.png" />
+        <img id="digitador" src="digitador.png" />
+        <p id="subImpListas"><span>Implementación con Listas &#8594;</span></p>
+        <img id="impListas" class="lightbox" src="arbolBListas.png" />
+        <p id="subImpEst"><span>Implementación con Estructuras &#8594;</span></p>
+        <img id="impEst" class="lightbox" src="arbolEst.png" />
       <!-- #tab7 -->
-    </div>
+      </div>
   </div>
 </div>
 </article>
