--- a/tema2.html
+++ b/tema2.html
@@ -179,11 +179,11 @@
                         <ul>
                           <li class="activeP4"><a href="#tab-1" tab-id="1" ripple="ripple" ripple-color="#FFF">Definición</a></li>
                           <li><a href="#tab-2" tab-id="2" ripple="ripple" ripple-color="#FFF">Características</a></li>
-                          <li><a href="#tab-3" tab-id="3" ripple="ripple" ripple-color="#FFF">Representación</a></li>
-                          <li><a href="#tab-4" tab-id="4" ripple="ripple" ripple-color="#FFF">Manejo</a></li>
+                          <li><a href="#tab-3" tab-id="3" ripple="ripple" ripple-color="#FFF">Implementación</a></li>
+                          <li><a href="#tab-4" tab-id="4" ripple="ripple" ripple-color="#FFF">Funciones</a></li>
                           <li><a href="#tab-5" tab-id="5" ripple="ripple" ripple-color="#FFF">Representación</a></li>
-                          <li><a href="#tab-5" tab-id="6" ripple="ripple" ripple-color="#FFF">Manejo</a></li>
-                          <li><a href="#tab-5" tab-id="7" ripple="ripple" ripple-color="#FFF">Ejemplo 6</a></li>
+                          <li><a href="#tab-6" tab-id="6" ripple="ripple" ripple-color="#FFF">manejo</a></li>
+                          <li><a href="#tab-7" tab-id="7" ripple="ripple" ripple-color="#FFF">Manejo</a></li>
                         </ul>
                       </div>
                       <div class="tabsP4-content">
@@ -219,15 +219,14 @@
                         <span>
                           <b>Funciones Importantes</b><br><br>
                           <b>Cons</b>: Toma dos argumentos y devuelve una lista construida a partir de esos dos argumentos.<br><br>
-                          <b>Car</b>:  Devuelve el dato de la raíz del árbol.<br><br>
-                          <b>Cdr</b>:  Devuelve la lista de árboles hijos (lista vacía, cuando es un nodo hoja).<br><br>
-                          <b>Cadr</b>: Devuelve el segundo elemento.<br>
+                          <b>First</b>:  Devuelve el dato de la raíz del árbol.<br><br>
+                          <b>Rest</b>:  Devuelve la lista de árboles hijos (lista vacía, cuando es un nodo hoja).<br><br>
                         </span>
                       </div>
 
                     </div>
 
-                    <div class="tabP4" tab-id="3">
+                    <div class="tabP4" tab-id="5">
 
 
                       <div class="recuadro6">REPRESENTACIÓN DE ARBOLES GENÉRICOS CON LISTAS</div>
@@ -258,10 +257,10 @@
 
                   </div>
 
-                  <div class="tabP4" tab-id="4">
+                  <div class="tabP4" tab-id="6">
                    <div class="recuadro8">FUNCIONES CON LISTAS PARA MANEJO DE ARBOLES GENÉRICOS</div>
-                   <img id="notaSuma" src="notaSuma.png"/>
-                   <img id="profesora" src="profesora.png"/>
+                   <!---<img id="notaSuma" src="notaSuma.png"/>
+                   <img id="profesora" src="profesora.png"/>--->
                    <div class="tabsP3">
 
                      <div class="tabP3">
@@ -270,6 +269,7 @@
                        <div class="contentP3">
                         <p id="titulo2"><span>DESCRIPCIÓN</span></p> <br><br>
                         <img id="conte1" src="conte1.png"/>
+                        <img id="sumaArbol" src="sumaArbol.png"/>
 
                       </div> 
                     </div>
@@ -280,6 +280,7 @@
                      <div class="contentP3">
                       <p id="titulo2"><span>DESCRIPCIÓN</span></p> </b><br><br>
                       <img id="conte2" src="conte2.png"/>
+                       <img id="toList" src="toList.png"/>
 
                     </div> 
                   </div>
@@ -291,6 +292,7 @@
                    <div class="contentP3">
                      <p id="titulo2"><span>DESCRIPCIÓN</span></p> <br><br>
                      <img id="conte3" src="conte3.png"/>
+                     <img id="cuadrado" src="cuadrado.png"/>
                    </div> 
                  </div>
 
@@ -301,6 +303,7 @@
                    <div class="contentP3">
                      <p id="titulo2"><span>DESCRIPCIÓN</span></p> <br><br>
                      <img id="conte4" src="conte4.png"/>
+                     <img id="altura" src="altura.png"/>
                    </div>
                  </div>
 
@@ -308,11 +311,17 @@
 
              </div>
 
-             <div class="tabP4" tab-id="5">
-              <div class="recuadro9">REPRESENTACIÓN DE ARBOLES GENÉRICOS CON ESTRUCTURAS</div>
+             <div class="tabP4" tab-id="3">
+              <div class="recuadro9">IMPLEMENTACIÓN DE ARBOLES GENÉRICOS</div>
+              <img id="arbolGenerico" src="arbolGenerico.png"/>
+              <img id="aGenerico" src="aGenerico.gif"/>
+            <div class="arrow2">
+              <div class="arrow-part2"></div>
+              <div class="arrow-part2"></div>
+            </div>
              </div>
 
-             <div class="tabP4" tab-id="6">
+             <div class="tabP4" tab-id="4">
 
               <div class="recuadro5">FUNCIONES CON ESTRUCTURAS PARA MANEJO DE ARBOLES GENÉRICOS</div>
               <div class='caja1'>
@@ -342,7 +351,7 @@
                 <input type="checkbox" id="toggles5" />
                 <label class="buttonMass5" for="toggles5"></label>
                 <nav class="nav5">
-                  <img id="arbolListas" src="arbolListas.png"/>
+                  <img id="estructura" src="estructura.png"/>
 
                 </nav>
               </div>
