--- a/tema2.html
+++ b/tema2.html
@@ -54,6 +54,8 @@
         <!-- PESTAÑAS -->      
         <div class="menu">
           <ul class="menu__tabs">
+            <li><a href="#item-6">6</a></li>
+            <li><a href="#item-5">5</a></li>
             <li><a href="#item-4">4</a></li>
             <li><a href="#item-3">3</a></li>
             <li><a href="#item-2">2</a></li>
@@ -622,6 +624,14 @@
   </div>
 </div>
 </article>
+    <!-- PESTAÑA 5 --> 
+    <article id="item-5" class="menu__item">
+           
+    </article>
+    <!-- PESTAÑA 6 --> 
+    <article id="item-6" class="menu__item">
+           
+    </article>         
 </section>
 <div class="menu--shadow"></div>
 </div>
