listas en listas
pestaña 5

--- a/tema2.html
+++ b/tema2.html
@@ -626,8 +626,27 @@
 </article>
     <!-- PESTAÑA 5 --> 
     <article id="item-5" class="menu__item">
-           
+
+      <div class="ContenText3">
+         <h1>LISTAS EN LISTAS</h1>
+      </div>
+
+      <div id="caja4" class="i22"><span>Si la pareja que guardamos como elemento de la lista es la cabeza de otra lista tenemos una lista que contiene a otra lista: </span> 
+                            <div class="cajaTextoP4">
+                        <div class="cajaTexto-contenidoP4">
+                          <div class="cajaTexto-textP4">
+                            (define lista (list 1 (list 1 2 3) 3))
+                          </div>
+                        </div>
+                      </div>
+      <img  id="size" class="lightbox" src="size.png" />
+      <img  id="Dcaja" src="Dcaja.png" />
+      </div>
+      <div id="lista5" class="listaLista"><span>Lista que contiene otra lista como segundo elemento.</span>
+      </div>
+   
     </article>
+
     <!-- PESTAÑA 6 --> 
     <article id="item-6" class="menu__item">
            
