--- a/tema2.html
+++ b/tema2.html
@@ -646,11 +646,51 @@
       </div>
    
     </article>
-
     <!-- PESTAÑA 6 --> 
     <article id="item-6" class="menu__item">
-           
-    </article>         
+      <img id="subDefLocales" src="dLocales.png" />
+      <p id="indPestañasH"><span>Haz clic sobre las pestañas horizontales para observar el contenido.</span></p>
+      <div class='css3-tab'>
+        <input type='radio' name='a' id='tabOne' tabindex="1" checked>
+        <input type='radio' name='a' id='tabTwo' tabindex="2">
+        <input type='radio' name='a' id='addNew' tabindex="3">
+        <div class="css3-tab-nav">
+            <label for='tabOne'>DEFINICIÓN</label>
+            <label for='tabTwo'>EJEMPLO</label>
+            <label for='addNew'>SEMÁNTICA</label>
+        </div>
+        <!-- ITEM 1-->
+        <div class='css3-tab-content tab-one'>
+          <div class='containers'>
+            <p id="conceptoLocal"><span>La función <b>Local</b> es aquella que permite que las definiciones sean visibles en algunas partes del código y no en todo el programa.</span></p>
+          </div>
+            <p id="cajaV" data-title="SINTAXIS" class="dialog-box_success">
+              <span>Una expresión <b>local</b> es solo otro tipo de expresión:</span>
+              <img id="imgSintaxis" src="sintaxis.png" />
+            </p>
+            <div class="perspective">
+              <div class="note">
+                <h1>Importante...</h1>
+                <p id="pDefLocal"><span>La palabra clave <b>local</b> distingue esta nueva clase de expresiones de otras expresiones. La secuencia entre paréntesis que sigue a local se conoce como <b>DEFINICIÓN LOCAL</b>. Las definiciones se denominan variables, funciones o <b>estructuras DEFINIDAS LOCALMENTE</b>.</span></p>
+              </div>
+            </div>
+        </div>
+        <!-- ITEM 2-->
+        <div class='css3-tab-content tab-two'>
+            <!-- start slipsum code -->
+            <h1>Tab Two will be shown by default via the checked attr on the corresponding input</h1>
+            Integer elementum massa at nulla placerat varius. Suspendisse in libero risus, in interdum massa. Vestibulum ac leo vitae metus faucibus gravida ac in neque. Nullam est eros, suscipit sed dictum quis, accumsan a ligula. In sit amet justo lectus. Etiam feugiat dolor ac elit suscipit in elementum orci fringilla. Aliquam in felis eros. Praesent hendrerit lectus sit amet turpis tempus hendrerit. Donec laoreet volutpat molestie. Praesent tempus dictum nibh ac ullamcorper. Sed eu consequat nisi. Quisque ligula metus, tristique eget euismod at, ullamcorper et nibh. Duis ultricies quam egestas nibh mollis in ultrices turpis pharetra. Vivamus et volutpat mi. Donec nec est eget dolor laoreet iaculis a sit amet diam.
+            <h2>Donec malesuada vehicula</h2>  
+        </div>
+        <!-- ITEM 3-->
+        <div class='css3-tab-content add-new'>
+            <!-- start slipsum code -->
+            <h1>Add New</h1>
+            Integer elementum massa at nulla placerat varius. Suspendisse in libero risus, in interdum massa. Vestibulum ac leo vitae metus faucibus gravida ac in neque. Nullam est eros, suscipit sed dictum quis, accumsan a ligula. In sit amet justo lectus. Etiam feugiat dolor ac elit suscipit in elementum orci fringilla. Aliquam in felis eros. Praesent hendrerit lectus sit amet turpis tempus hendrerit. Donec laoreet volutpat molestie. Praesent tempus dictum nibh ac ullamcorper. Sed eu consequat nisi. Quisque ligula metus, tristique eget euismod at, ullamcorper et nibh. Duis ultricies quam egestas nibh mollis in ultrices turpis pharetra. Vivamus et volutpat mi. Donec nec est eget dolor laoreet iaculis a sit amet diam.
+            <h2>Donec malesuada vehicula</h2>
+        </div>
+    </div>
+    </article>                 
 </section>
 <div class="menu--shadow"></div>
 </div>
